<resources>
    <string name="app_name">Questionario</string>
    <string name="quiz_text">QUIZ Matemática</string>
    <string name="start_button">Iniciar V1</string>
    <string name="quiz_title">Quiz Matemática</string>
    <string name="question_nr_1">Q1:</string>
    <string name="question_nr_2">Q2:</string>
    <string name="question_nr_3">Q3:</string>
    <string name="number1_q1">TextView</string>
    <string name="number2_q1">TextView</string>
    <string name="title_quiz">Questões</string>
    <string name="sum">+</string>
    <string name="equal">=</string>
    <string name="answer">Resposta</string>
    <string name="number1_q2">TextView</string>
    <string name="subract">-</string>
    <string name="number2_q2">TextView</string>
    <string name="number1_q3">TextView</string>
    <string name="multiply">x</string>
    <string name="number2_q3">TextView</string>
    <string name="submit_button">Submeter</string>
    <string name="toast_message">Preencha todos os campos!</string>
    <string name="result_q1">TextView</string>
    <string name="result_q2">TextView</string>
    <string name="result_q3">TextView</string>
    <string name="final_result">TextView</string>
    <string name="results">Resultados</string>
    <string name="question">Qual o valor de x na seguinte equação:</string>
    <string name="start_button2">INICIAR V2</string>
    <string name="operation">TextView</string>
    <string name="xEqual">X =</string>
    <string name="input_value">valor</string>
    <string name="check_button">Verifica</string>
    <string name="result_message">O resultado está ?</string>
    <string name="warning_message1">"Não preencheu todos os campos!"</string>
    <string name="warning_message2">"Não preencheu o campo!"</string>
</resources>